# birthday-present-agent

./: .env.example  README.md  pyproject.toml  streamlit_agent_engine_app.py  streamlit_app.py  デプロイの流れ.md
.streamlit/: config.toml
birthday_present_agent/: __init__.py  agent.py  prompt.py
birthday_present_agent/tools/: __init__.py  product_details.py  shopping.py  social_profile.py
deployment/: deploy.py
streamlit-app/: .env.sample.yaml  Procfile  README.md  generate_env_yaml.sh  main.py  pyproject.toml  requirements.txt
