[project]
name = "birthday-present-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
    "google-genai>=1.9.0",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.0",
    "pydantic>=2.10.6",
    "tenacity>=9.0.0",
    "xai-sdk>=1.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["birthday_present_agent*"]

[tool.uv.workspace]
members = [
    "line-api",
]
